# advent-of-code

./: .gitignore  README.md  learnings.md  newday  package.json  pyproject.toml  requirements.txt  tsconfig.json
2015/day-01/: v1.ua  v2.ua
2015/day-02/: v1.ua  v2.ua
2015/day-05/: v1.ua
2015/day-08/: main.ua
2016/: README.md  lib.ua  project.clj
2016/day-03/: main.jl  main.ua
2016/day-04/: main.ua
2016/day-06/: main.ua
2016/day-08/: main.ua
2016/day-09/: main.ua
2016/day-12/: main.ua
2018/: Cargo.toml
2018/day-01/: Cargo.toml
2018/day-02/: Cargo.toml
2018/day-03/: Cargo.toml
2018/day-04/: Cargo.toml
2018/day-05/: Cargo.toml
2018/day-06/: Cargo.toml
2018/template/: Cargo.toml
2019/: Cargo.toml
2019/01/: v1.hs
2019/02/: v1.hs
2019/03/: v1.hs
2019/04/: v1.hs
2019/05/: v1.hs
2019/06/: v1.hs
2019/07/: v1.hs
2019/08/: v1.hs
2019/09/: debug.txt
2019/10/: v1.hs
2019/14/: wip
2019/day-01/: v1.ua  v2.hs
2019/day-02/: Cargo.toml
2019/day-03/: v1.hs
2019/day-04/: v1.ua  v2.ua
2019/day-05/: Cargo.toml
2019/day-08/: v1.ua
2019/day-09/: Cargo.toml  v1.hs
2019/day-11/: Cargo.toml
2019/day-12/: lib.ua  v1.hs  v1.ua
2019/day-13/: Cargo.toml
2019/day-14/: v1.hs
2019/day-16/: v1.ua
2019/day-22/: v1.ua
2019/intcode-computer/: Cargo.toml  README.md
2019/intcode-computer-cli/: Cargo.toml  README.md
2019/intcode-computer-cli/src/: main.rs
2019/intcode-computer-cli/tests/: cli.rs
2020/: learnings.md
2020/day-01/: v1.py
2020/day-02/: v2.py
2020/day-03/: v1.py  v2_test.py
2020/day-05/: v2_test.py
2020/day-06/: v3_all-strings.py  v4_functional.py  v5_pipe-dreams.py
2020/day-07/: v2_part_1_and_2.py
2020/day-08/: v1.py
2020/day-10/: v1.py
2020/day-13/: test.py
2020/day-14/: v2.py
2020/day-15/: v1.py  v2.py
2020/day-16/: v2.py
2020/day-17/: v1.fsx  v1.js  v1.rb  v1_part1.py  v1_part2.hs  v1_part2.py  v2.rb  v2_part2.py
2020/day-18/: v1.py
2020/day-19/: v2.py
2020/day-21/: v1.py
2020/day-22/: v1.py
2020/day-23/: v1.py
2020/day-25/: v1.go
2021/01/: slice.go  v1.go  v2.go  v3.go  v4.go
2021/02/: v1.go  v1.ts
2021/03/: v1.ts  v2.ts  v3.ts
2021/04/: v1.ts  v2.ts  v3.ts
2021/05/: v1.ts  v2.ts
2021/06/: v1.go  v1.ts  v2.ts  v3.ts  v4_rambda.ts
2021/07/: v1.ts  v2.ts
2021/08/: v1.ts
2021/09/: v1.ts  v2.ts
2021/10/: v1.ts
2021/11/: v1.ts  v2.ts
2021/12/: v1.ts
2021/13/: v1.ts  v2.ts
2021/14/: magnus.txt  v1.ts
2021/15/: v1.ts
2021/16/: v1.ts  v2.ts  v3.ts
2021/17/: v1.ts
2021/18/: v1.ts
2021/19/: v1.ts
2021/20/: main.ua  v1.ts
2021/21/: p1_v2_weird.ts  v1.ts
2021/22/: v1.ts  v2.ts
2021/23/: v1.ts
2021/24/: v1.ts
2021/25/: v1.ts  v2.ts
2022/: Cargo.toml
2022/.cargo/: config.toml
2022/day-01/: Cargo.toml
2022/day-01/src/: main.rs
2022/day-02/: Cargo.toml
2022/day-02/src/: main.rs
2022/day-03/: Cargo.toml
2022/day-03/src/: main.rs
2022/day-04/: Cargo.toml
2022/day-04/src/: main.rs
2022/day-05/src/: main.rs
2022/day-06/: Cargo.toml
2022/day-06/benches/: bench.rs
2022/day-06/src/: lib.rs  main.rs
2022/day-07/: Cargo.toml  my_data
2022/day-07/src/: main.rs
2022/day-08/: Cargo.toml
2022/day-08/src/: main.rs
2022/day-09/: Cargo.toml
2022/day-09/src/: main.rs
2022/day-10/: Cargo.toml
2022/day-10/src/: main.rs
2022/day-11/: Cargo.toml
2022/day-11/src/: main.rs
2022/day-12/: Cargo.toml
2022/day-12/src/: main.rs
2022/day-13/: Cargo.toml
2022/day-13/src/: main.rs
2022/day-14/: Cargo.toml
2022/day-14/src/: main.rs
2022/day-15/: Cargo.toml
2022/day-15/src/: main.rs
2022/day-16/: Cargo.toml
2022/day-16/src/: main.rs
2022/day-17/: Cargo.toml
2022/day-17/src/: coord.rs  jet.rs  main.rs  rock.rs
2022/day-18/: Cargo.toml
2022/day-18/src/: main.rs
2022/day-19/: Cargo.toml
2022/day-19/src/: main.rs
2022/day-20/: Cargo.toml
2022/day-20/src/: main.rs
2022/day-21/: Cargo.toml
2022/day-21/src/: main.rs
2022/day-22/: Cargo.toml
2022/day-22/src/: main.rs
2022/day-23/: Cargo.toml
2022/day-23/src/: main.rs
2022/day-24/: Cargo.toml
2022/day-24/src/: main.rs
2022/day-25/: Cargo.toml
2022/day-25/src/: main.rs
2022/day-5/: Cargo.toml
2022/day-5/src/: main.rs
2022/template/: Cargo.toml
2022/template/src/: main.rs
2023/: Cargo.toml
2023/.cargo/: config.toml
2023/src/: lib.ua
2024/day-01/: core.clj  main.ua
2024/day-02/: main.ua
2024/day-03/: main.ua
2024/day-04/: example_1.txt  main.ua  test_1.txt
2025/: Cargo.toml
2025/src/day-01/: main.rs
2025/src/day-02/: main.rs
2025/src/day-03/: main.rs
2025/src/day-04/: main.rs
2025/src/day-05/: input.txt  main.rs
2025/src/day-06/: input.txt  main.rs
2025/src/day-07/: main.rs
day-01/: v2.py
day-02/: v1.py
day-03/: v1.py  v2.py
day-04/: v1.py  v1_test.py
day-05/: v1.py  v1_test.py  v2.py
day-06/: v1_loop.py  v2_comprehensions.py
day-07/: v1_part_1.py  v3_clean_up.py
day-08/: v2.py
day-09/: v1.py  v2_nice.py  v3_ugly.py
day-10/: v1_test.py
day-11/: v1.py  v2.py
day-12/: v1.py  v2.py
day-13/: v1.py
day-14/: v1.py
day-16/: v1.py
day-17/: v1.fsx  v1.rb  v1.ts  v2_part2.py
day-18/: test.py  v1_test.py
day-19/: v1.py
day-20/: v1.py
day-22/: v2.py
day-23/: output.txt
day-24/: v1.py  v2.py
day-25/: v1.py  v2.go
(+63 files in other folders)
