[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# This list was migrated as-is from the requirements.txt file.
astroid = "2.4.2"
attrs = "20.3.0"
autopep8 = "1.5.4"
certifi = "2020.11.8"
chardet = "3.0.4"
click = "7.1.2"
colorama = "0.4.4"
dill = "0.3.3"
docopt = "0.6.2"
idna = "2.10"
iniconfig = "1.1.1"
isort = "5.6.4"
lazy-object-proxy = "1.4.3"
mccabe = "0.6.1"
packaging = "20.7"
pathtools = "0.1.2"
pip-tools = "5.4.0"
pipetools = "0.3.6"
pluggy = "0.13.1"
py = "1.9.0"
pycodestyle = "2.6.0"
pylint = "2.6.0"
pyparsing = "2.4.7"
pytest = "6.1.2"
rope = "0.18.0"
six = "1.15.0"
tabulate = "0.8.7"
toml = "0.10.2"
urllib3 = "1.26.2"
watchdog = "0.10.4"
wrapt = "1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
