[workspace]
members = ["template", "day-*"]

[profile.dev]
opt-level = 2

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
colored = "2.0.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
num = "0.4.0"
regex = "1.7.0"

# These should be dev depedencies, but to inherit those they need to be listed as normal dependencies here.
pretty_assertions = "1.3.0"
