[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
colored = "2.0.4"
colorize = "0.1.0"
either = "1.9.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
pathfinding = "4.3.3"
rayon = "1.8.0"
regex = "1.10.2"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
