[package]
name = "day-06"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono =  { workspace = true }
itertools =  { workspace = true }
lazy_static =  { workspace = true }
regex =  { workspace = true }

[dev-dependencies]
bencher = "0.1.5"
pretty_assertions =  { workspace = true }

[[bench]]
name = "bench"
harness = false
