[package]
name = "day-14"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono =  { workspace = true }
itertools =  { workspace = true }
lazy_static =  { workspace = true }
regex =  { workspace = true }

[dev-dependencies]
pretty_assertions =  { workspace = true }
