[package]
name = "day-16"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono =  { workspace = true }
itertools =  { workspace = true }
lazy_static =  { workspace = true }
pathfinding = "4.1.1"
regex =  { workspace = true }

[dev-dependencies]
pretty_assertions =  { workspace = true }
