[package]
name = "day-24"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono =  { workspace = true }
colored.workspace = true
itertools =  { workspace = true }
lazy_static =  { workspace = true }
regex =  { workspace = true }

[dev-dependencies]
pretty_assertions =  { workspace = true }
