[package]
name = "day-25"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono =  { workspace = true }
itertools =  { workspace = true }
lazy_static =  { workspace = true }
regex =  { workspace = true }
rstest = "0.16.0"

[dev-dependencies]
pretty_assertions =  { workspace = true }
